[project]
name = "poaurk"
dynamic = ["version", "readme"]
description = "Light Plurk API 2.0 Oauth Library"
authors = [{ name = "Dephilia", email = "me@dephilia.moe" }]
dependencies = ["aiofiles>=24.1.0", "aiohttp>=3.9.3", "oauthlib>=3.2.2"]
requires-python = ">= 3.10"

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff.lint]
select = ["E", "W", "N", "D", "F", "PL", "UP", "I"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
