[metadata]
name = poaurk
version = 0.1.0
author = Dephilia
author_email = me@dephilia.moe
description = Python Plurk Api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dephilia/poaurk
project_urls =
    Bug Tracker = https://github.com/dephilia/poaurk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = poaurk
packages = find:
python_requires = >=3.8

[options.packages.find]
where = poaurk
