[metadata]
name = poaurk
version = file: poaurk/_version.txt
author = Dephilia
author_email = me@dephilia.moe
description = Python Plurk Api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dephilia/poaurk
project_urls =
    Bug Tracker = https://github.com/dephilia/poaurk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests
    requests_oauthlib
packages = poaurk
# package_dir =
#     = src
# packages = find:
python_requires = >=3.8

# [options.packages.find]
# where = src
